--- a/src/app/templates/instances.html
+++ b/src/app/templates/instances.html
@@ -22,8 +22,15 @@
                         <input type="number" class="form-control" name="no-of-instances">
                     </div>
                     <div class="form-group">
-                        <label>Select the OS</label>
-                        <input type="number" class="form-control" id="os-name" name="os-name">
+                        <label>Select the Region</label>
+                        <select class="form-control" id="region" name="region">
+                            <option selected>Choose One</option>
+                            <option>US Central</option>
+<!--                            <option>US North</option>-->
+                            <option>US East</option>
+                            <option>US West</option>
+<!--                            <option>US South</option>-->
+                        </select>
                     </div>
 
                     <div class="row">
